Manager fix for some commands + don't require session token for executing commands. Restored "StoreLogo" naming in the json files